--- a/index.html
+++ b/index.html
@@ -30,5 +30,11 @@
         <div class="text-xl font-bold text-white">QR Code Generator</div>
       </div>
     </header>
+    <main>
+      <div class="flex flex-col-reverse align-center justify-center m-auto md:max-w-4xl md:flex-row">
+        <div>Div 1</div>
+        <div>Div 2</div>
+      </div>
+    </main>
   </body>
 </html>
