--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
     </header>
     <main>
       <div class="flex flex-col-reverse align-center justify-center m-auto md:max-w-4xl md:flex-row">
-        <div>Div 1</div>
-        <div>Div 2</div>
+        <div class="w-full md:w-2/3 mr-24">Div 1</div>
+        <div class="w-full md:w-1/3 self-center">Div 2</div>
       </div>
     </main>
   </body>
