--- a/index.html
+++ b/index.html
@@ -32,7 +32,11 @@
     </header>
     <main>
       <div class="flex flex-col-reverse align-center justify-center m-auto md:max-w-4xl md:flex-row">
-        <div class="w-full md:w-2/3 mr-24">Div 1</div>
+        <div class="w-full md:w-2/3 mr-24">
+          <h1 class="text-3xl font-bold mb-5 md:text-4xl">
+            QR Code Generator
+          </h1>
+        </div>
         <div class="w-full md:w-1/3 self-center">
           <img src="img/qr-code.svg" alt="" class="w-1/2 m-auto mb-10 md:w-full">
         </div>
