--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
       referrerpolicy="no-referrer"
     ></script>
     <script src="js/script.js" defer></script>
+    <style>
+      #spinner {
+        display: none;
+      }
+    </style>
     <title>QR Code Generator</title>
   </head>
   <body>
