--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
       </div>
       <!-- Generated QR Code -->
       <div
+        id="generated"
         class="max-w-5xl m-auto flex flex-col text-center align-center justify-center mt-20"
       >
         <!-- Spinner-->
